style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');

body {font-family: 'Open Sans', sans-serif;}

/* header navigation */

.header-nav {
    display: flex;
    background-color: whitesmoke;
    height: 64px;
    justify-content: space-between;
    padding-left: 24px;
    padding-right: 24px;
    align-items: center;
}

.logo {
    display: flex;
    background-color: white;
    height: 32px;
    align-items: center;
    color: grey;
}

p1 {
    color: black;
    font-weight: bold;
}

.nav-site {
    display: flex;
    gap: 16px;
    color: #2e2e2e;
}

ul {
    list-style: none;
}

/* introduction section */

.introduction {
    display: flex;
    background-color: #d3d3d3;
    padding-top: 32px;
    padding-bottom: 32px;
    padding-left:24px;
    gap: 24px;
    align-items: center;
}

.intro-pic {
    width: 60%;
}

.intro-content {
    display: flex;
    flex-direction: column;
    gap:  16px;
    /* background-color: #2e2e2e; */
    width: 30%;
}

.intro-head-font {
    font-size: xx-large;
    font-weight: bold;
}

.intro-button {
    padding-top: 8px ;
    padding-bottom: 8px;
    color:#d3d3d3;
    background-color: #2e2e2e;
}

/* information section */

    /* info-intro */

.information {
    display: flex;
    background-color: whitesmoke;
    gap: 24px;
}

.info-main {
    display: flex;
    flex-direction: column;
    /* background-color: red; */
    padding-top: 32px;
    padding-bottom: 32px;
    padding-left:24px;
    gap: 24px;
    width: 60%;
}

.info-intro {
    display: flex;
    flex-direction: column;
    gap: 32px;
}

.info-intro-article {
    display: flex;
    flex-direction: column;
    gap: 24px;
}

.info-intro-head {
    font-size: x-large;
    font-weight: bold;

}

    /* info-article */

.infor-article {display: flex;}

